Refactor auth endpoints
