# backend/src/main/kotlin/com/violet/features/auth/models/SignupResponse.kt
@@ -1,0 +1,9 @@
+package com.violet.features.auth.models
+
+import kotlinx.serialization.Serializable
+
+@Serializable
+data class SignupResponse(
+    val emailSent: Boolean,
+    val message: String
+)
